[metadata]
name = mlm_sim
description = api to mlm_sim
url = https://github.com/metaperl/mlm-sim
author = metaperl
author_email = metaperl.jobs@gmail.com
license = MIT
long_description = file: README.md
classifiers =
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8